@@ -4,10 +4,20 @@ init:
     ; If entering from the overworld, skip.
     lda $141A|!addr : beq main
 
-    ; If respawning from Retry, skip.
-    lda !ram_is_respawning : bne main
+    ; Check if we're respawning from Retry.
+    lda !ram_is_respawning : beq .not_respawning
 
-    ; Backup the current entrance value for later.
+.respawning:
+    ; If yes, store the $9D backup to $9D.
+    ; This makes pipe entrances consistent in how sprites behave during them.
+    lda !ram_9D_backup : sta $9D
+    bra main
+
+.not_respawning:
+    ; If it's a normal transition, backup $9D...
+    lda $9D : sta !ram_9D_backup
+
+    ; ...and backup the current entrance value for later.
     %get_screen_number()
     lda $19B8|!addr,x : sta !ram_door_dest
     lda $19D8|!addr,x : sta !ram_door_dest+1
