@@ -1,53 +1,36 @@
 ; Gamemode 03
 
 init:
-    ; Initialize the retry ram.
-    lda #$00
-    sta !ram_timer+0
-    sta !ram_timer+1
-    sta !ram_timer+2
-    sta !ram_respawn+0
-    sta !ram_respawn+1
-    sta !ram_is_respawning
-    sta !ram_music_to_play
-    sta !ram_hurry_up
-    sta !ram_door_dest+0
-    sta !ram_door_dest+1
-    sta !ram_music_backup
-    sta !ram_update_request
-    sta !ram_is_dying
-    sta !ram_prompt_phase
-    sta !ram_update_window
-    sta !ram_prompt_override
-    sta !ram_death_counter+0
-    sta !ram_death_counter+1
-    sta !ram_death_counter+2
-    sta !ram_death_counter+3
-    sta !ram_death_counter+4
-    lda.b #!no_exit_option
-    sta !ram_disable_exit
-    lda #$FF
-    sta !ram_set_checkpoint+0
-    sta !ram_set_checkpoint+1
+    ; Initialize the retry ram to 0.
+    rep #$30
+    ldx #$0024
+    lda #$0000
+-   sta !retry_freeram
+    dex #2 : bpl -
+
+    ; Initialize "set checkpoint" handle to $FFFF.
+    dec : sta !ram_set_checkpoint
 
     ; Initialize the checkpoint ram table.
-    rep #$30
     ldx #$00BE
     ldy #$005F
 -   tya : cmp #$0025 : bcc +
     clc : adc #$00DC
 +   sta !ram_checkpoint,x
     dex #2
-    dey
-    bpl -
+    dey : bpl -
 
     ; Set the intro level checkpoint (level 0 = intro).
     lda.w #!intro_sublevel : sta !ram_checkpoint
+    
     sep #$30
+
+    ; Initialize "No exit" flag.
+    lda.b #!no_exit_option : sta !ram_disable_exit
 
     ; Call the custom load title routine.
     php : phb : phk : plb
     jsr extra_load_title
     plb : plp
-
+    
     rtl
