@@ -37,7 +37,8 @@ endif
 !ram_prompt_override = !retry_freeram+$0F ; 1
 !ram_disable_exit    = !retry_freeram+$10 ; 1
 !ram_set_checkpoint  = !retry_freeram+$11 ; 2
-!ram_reserved        = !retry_freeram+$13 ; 13 (reserved for future expansion)
-!ram_checkpoint      = !retry_freeram+$20 ; 192
-!ram_death_counter   = !retry_freeram+$E0 ; 5
+!ram_9D_backup       = !retry_freeram+$13 ; 1
+!ram_reserved        = !retry_freeram+$14 ; 12 (reserved for future expansion)
+!ram_death_counter   = !retry_freeram+$20 ; 5
+!ram_checkpoint      = !retry_freeram+$25 ; 192
 !ram_cust_obj_data   = !retry_freeram+$E5 ; 1+(!max_custom_midway_num*4)
