@@ -36,7 +36,7 @@ checkpoint:
     db $00,$00,$00,$00,$00,$00,$00,$00 ; 0D0-0DF
     db $00,$00,$00,$00,$00,$00,$00,$00 ; 0E0-0EF
     db $00,$00,$00,$00,$00,$00,$00,$00 ; 0F0-0FF
-    db $00,$00,$00,$00,$00,$00,$00,$00 ; 100-10F
+    db $00,$00,$00,$20,$00,$00,$00,$00 ; 100-10F
     db $00,$00,$00,$00,$00,$00,$00,$00 ; 110-11F
     db $00,$00,$00,$00,$00,$00,$00,$00 ; 120-12F
     db $00,$00,$00,$00,$00,$00,$00,$00 ; 130-13F
