@@ -93,16 +93,23 @@ Now for the actual RAM addresses (names are prefixed with "!ram_" in ram.asm, an
 ;                 ;         ;       ; sprites with retry's multiple midway system. For more   ;
 ;                 ;         ;       ; info, see "docs/troubleshooting.txt".                   ;
 ;=============================================================================================;
-; reserved        ;   $13   ;  $0D  ; Unused, but reserved for future expansion.              ;
+; 9D_backup       ;   $13   ;  $01  ; Holds a backup of the $9D value when going through a    ;
+;                 ;         ;       ; normal transition, which is then restored when respawn- ;
+;                 ;         ;       ; ing. This makes pipe entrances into a level consistent  ;
+;                 ;         ;       ; when respawning, since sprites are locked during them   ;
+;                 ;         ;       ; only if $9D was set before the transition (i.e., if a   ;
+;                 ;         ;       ; pipe was entered, but not if a door was entered).       ;
+;=============================================================================================;
+; reserved        ;   $14   ;  $0C  ; Unused, but reserved for future expansion.              ;
 ;                 ;         ;       ; Usage as free ram is not recommended.                   ;
 ;=============================================================================================;
-; checkpoint      ;   $20   ;  $C0  ; Checkpoint data for each level (2 bytes per level).     ;
-;                 ;         ;       ; Holds the destination value of the latest checkpoint    ;
-;                 ;         ;       ; obtained in each level. Saved to SRAM by default.       ;
-;=============================================================================================;
-; death_counter   ;   $E0   ;  $05  ; Holds the amount of deaths occurred. Each byte holds the;
+; death_counter   ;   $20   ;  $05  ; Holds the amount of deaths occurred. Each byte holds the;
 ;                 ;         ;       ; value of a digit in the counter (from left to right).   ;
 ;                 ;         ;       ; Saved to SRAM by default.                               ;
+;=============================================================================================;
+; checkpoint      ;   $25   ;  $C0  ; Checkpoint data for each level (2 bytes per level).     ;
+;                 ;         ;       ; Holds the destination value of the latest checkpoint    ;
+;                 ;         ;       ; obtained in each level. Saved to SRAM by default.       ;
 ;=============================================================================================;
 ; cust_obj_data   ;   $E5   ;  Var. ; Data for all the possible custom midway objects loaded  ;
 ;                 ;         ;       ; in the level, plus a counter for how many of these are  ;
